plugins {
    id 'java-library'
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

repositories {
    mavenCentral() // This is needed for dependencies.
    /*
	   As Spigot-API depends on the Bungeecord ChatComponent-API,
	   we need to add the Sonatype OSS repository, as Gradle,
	   in comparison to maven, doesn't want to understand the ~/.m2
	   directory unless added using mavenLocal(). Maven usually just gets
	   it from there, as most people have run the BuildTools at least once.
	   This is therefore not needed if you're using the full Spigot/CraftBukkit,
	   or if you're using the Bukkit API.
    */
    maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
    maven { url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
    mavenLocal() // This is needed for CraftBukkit and Spigot.

    // libs folder (TODO: transfer away from this!)
    flatDir {
        dirs 'libs'
    }
}

dependencies {
    compileOnly 'org.spigotmc:spigot:1.16.4-R0.1-SNAPSHOT'  // The full Spigot server with no shadowing. Requires mavenLocal.
    implementation name: 'Factions'
    implementation name: 'GriefPrevention'
    implementation name: 'MassiveCore'
    implementation name: 'PreciousStones'
    implementation name: 'RedProtect'
    implementation name: 'Residence'
    implementation name: 'Towny'
    implementation name: 'WorldEdit'
    implementation name: 'WorldGuard'
}